# timecard-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.rs
