[package]
name = "timecard-rs"
description = "Command line activity tracker program"
version = "0.1.0"
license = "mit"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5.3", features = ["cargo"] }
regex = "1.10"
